# instant

./: .gitignore  0_paintSvg.ts  AGENTS.md  LICENSE  NATIVE_HTTP.md  README.md  TASKS.md  TODO.md  dropcatcher.html  e2e-paint.html  e2e-term.html  index.html  justfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.dl/: .gitignore  conventions.dl  dom-match.dl  http-api.dl  native-http.dl  todos.dl  use-effect-leaks.dl
chat_log/: 20260621.0.instant-activity-store-capture-config-sessions.md  20260623.0.sprefa-rootless-multirepo-and-skill-docs.md  20260625.0.instant-v2-tables-xp-icons-rail-tabfixes.md  20260625.1.instant-v2-panels-promote-to-v1-ids.md  20260625.2.instant-v2-toolbars-zoom-files-worktrees-trees.md  20260625.3.instant-activity-spyware-capture-diagnostics-preview-tabs.md  20260626.0.instant-ai-turn-favorites-ledger-signing-deps.md  20260626.1.instant-grid-zoom-agent-kill-resume-scroll-focus.md  20260626.2.instant-agent-resume-session-id-cmdclick-open.md  20260626.3.instant-cmdtab-safeboot-logging-rg-highlight-badge-aitoggle.md  20260703.0.instant-agent-swarm-voice-ext-phone.md  20260720.3.json-rx-next-steps.md  (+8 more)
src-tauri/: .gitignore  Cargo.toml  Info.plist  target  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  capture.rs  cdp.rs  config.rs  favorites.rs  fs.rs  fs_watch.rs  harness.rs  kitty.rs  ledger.rs  lib.rs  main.rs  meme.rs  pty.rs  spy.rs  workspace.rs  worktrees.rs
src-tauri/src/sprefa_plugin/: commands.rs  mod.rs
(+242 files in other folders)
